--- a/app/src/main/res/layout/field_visit.xml
+++ b/app/src/main/res/layout/field_visit.xml
@@ -82,7 +82,7 @@
                         android:padding="2dp"
                         android:tint="@color/white"
                         android:src="@drawable/ic_history"
-                        android:onClick="@{()-> activity.loadHistory()}"
+                        android:onClick="@{()-> activity.getHistory()}"
                         android:scaleType="centerInside" />
 
 
