--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -116,7 +116,7 @@
     <color name="transparent_black_hex_9">#99000000</color>
     <color name="bg1">#f3f3f3</color>
     <color name="bg2">#fff</color>
-
+    <color name="greyed_very_lite">#b9d9d9d9</color>
     <color name="grey1">#878787</color>
     <color name="grey2">#505454</color>
     <color name="black_grey">#616565</color>
