--- a/app/src/main/res/drawable/gradiant_bg.xml
+++ b/app/src/main/res/drawable/gradiant_bg.xml
@@ -6,7 +6,7 @@
             <gradient
                 android:angle="180"
                 android:centerColor="@color/colorPrimary"
-                android:startColor="@color/darkpurple"
+                android:startColor="@color/purple"
                 android:endColor="@color/colorPrimaryDark"/>
             <corners android:radius="0dp" />
             <stroke
