--- a/app/src/main/res/drawable/new_field_visit_pending_screen_background_bg.xml
+++ b/app/src/main/res/drawable/new_field_visit_pending_screen_background_bg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:endColor="#6867E9" android:startColor="#9190EC"></gradient>
+    <gradient android:endColor="#6867E9"
+        android:startColor="#6768E9"></gradient>
 
 </shape>
