--- a/app/src/main/res/layout/exist_trader_details_whole_view.xml
+++ b/app/src/main/res/layout/exist_trader_details_whole_view.xml
@@ -13,8 +13,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="40dp">
+    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +22,7 @@
         <RelativeLayout
             android:id="@+id/header2_layout"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:background="@drawable/background">
 
 
@@ -73,6 +72,7 @@
         <com.github.barteksc.pdfviewer.PDFView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@+id/pageNum"
             android:layout_below="@+id/header2_layout"
             android:id="@+id/documentViewer"/>
         <TextView
@@ -82,7 +82,7 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:text="0"
-            android:layout_marginBottom="40dp"
+            android:padding="10dp"
             android:textAlignment="center"
             android:textColor="@color/grey2"
             android:textSize="13sp"
@@ -94,8 +94,7 @@
         android:visibility="visible"
         android:id="@+id/full_details"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="40dp">
+        android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -271,7 +270,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true" />
         <ScrollView
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             android:layout_below="@+id/appBarLayout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -279,8 +278,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
                 <RelativeLayout
@@ -800,6 +798,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/t47"
                     android:textSize="15sp"
+                    android:layout_marginBottom="20dp"
                     android:scrollbars = "vertical"
                     android:textColor="@color/grey2"
                     ></TextView>
