--- a/app/src/main/res/layout/pending_screen.xml
+++ b/app/src/main/res/layout/pending_screen.xml
@@ -4,9 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="40dp"
-    >
+    android:layout_height="match_parent">
     <RelativeLayout
         android:visibility="visible"
         android:layout_width="match_parent"
@@ -75,7 +73,7 @@
             <LinearLayout
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="3">
             <RelativeLayout
@@ -88,9 +86,10 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:textAlignment="center"
                     android:textStyle="bold"
                     android:textSize="13sp"
+                    android:gravity="center"
+                    android:layout_centerVertical="true"
                     android:id="@+id/tv_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -98,7 +97,7 @@
                     android:textColor="@color/white"></TextView>
                 <View
                     android:id="@+id/v_1"
-                    android:layout_below="@+id/tv_1"
+                    android:layout_alignParentBottom="true"
                     android:layout_width="wrap_content"
                     android:layout_height="1.5dp"
                     android:background="@color/white"></View>
@@ -112,10 +111,11 @@
                 android:layout_gravity="bottom"
                 android:orientation="vertical">
                 <TextView
-                    android:textAlignment="center"
+                    android:gravity="center"
                     android:textStyle="bold"
                     android:id="@+id/tv_2"
                     android:textSize="13sp"
+                    android:layout_centerVertical="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="UnSatisfied"
@@ -123,7 +123,7 @@
                 <View
                     android:visibility="gone"
                     android:id="@+id/v_2"
-                    android:layout_below="@+id/tv_2"
+                    android:layout_alignParentBottom="true"
                     android:layout_width="wrap_content"
                     android:layout_height="1.5dp"
                     android:background="@color/white"></View>
@@ -138,10 +138,11 @@
                 android:layout_gravity="bottom"
                 android:orientation="vertical">
                 <TextView
-                    android:textAlignment="center"
+                    android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="13sp"
                     android:id="@+id/tv_3"
+                    android:layout_centerVertical="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Need Improvement"
@@ -149,7 +150,7 @@
                 <View
                     android:visibility="gone"
                     android:id="@+id/v_3"
-                    android:layout_below="@+id/tv_3"
+                    android:layout_alignParentBottom="true"
                     android:layout_width="wrap_content"
                     android:layout_height="1.5dp"
                     android:background="@color/white"></View>
