--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -1,16 +1,13 @@
-<androidx.cardview.widget.CardView android:id="@+id/card_view"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/textView1"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    card_view:cardBackgroundColor="@color/grey"
-    card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="5dp"
-    card_view:cardUseCompatPadding="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-<CheckedTextView android:id="@android:id/text1"
-    style="@style/spinnerDropDownItemStyle"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:ellipsize="marquee"
-    android:singleLine="true" />
-</androidx.cardview.widget.CardView>
+    android:layout_centerVertical="true"
+    android:textColor="@color/grey2"
+    android:paddingLeft="10dp"
+    android:paddingTop="2dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="2dp"
+    android:textSize="@dimen/_15sdp" />
