--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,22 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
          <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+       <!-- <item name="statusBarBackground">@drawable/gradiant_bg</item>
+        <item name="android:statusBarColor">@color/full_transparent</item>-->
+
+       <!-- <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>-->
+        <item name="android:fitsSystemWindows">true</item>
+    </style>
+    <style name="spinnerTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
+        <item name="android:padding">8dp</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
