--- a/app/src/main/res/layout/new_dashboard.xml
+++ b/app/src/main/res/layout/new_dashboard.xml
@@ -720,6 +720,7 @@
                             android:layout_marginLeft="40dp"
                             android:layout_marginRight="40dp"
                             android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
                             android:clickable="true"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:onClick="@{()-> activity.pendingScreen()}"
