--- a/app/src/main/res/layout/new_dashboard.xml
+++ b/app/src/main/res/layout/new_dashboard.xml
@@ -22,7 +22,7 @@
                 android:background="@android:color/transparent"
                 android:id="@+id/img_rll"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_130sdp"
+                android:layout_height="@dimen/_140sdp"
                 >
                 <ImageView
                     android:layout_width="match_parent"
@@ -43,12 +43,12 @@
                     <RelativeLayout
                         android:id="@+id/header_layout"
                         android:layout_width="match_parent"
-                        android:layout_marginTop="15dp"
                         android:layout_height="wrap_content"
                         >
 
 
                         <ImageView
+                            android:layout_centerVertical="true"
                             android:id="@+id/refresh"
                             android:layout_width="@dimen/_30sdp"
                             android:layout_height="@dimen/_30sdp"
@@ -78,12 +78,12 @@
 
 
                         <TextView
+                            android:layout_centerVertical="true"
                             android:id="@+id/title_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
                             android:text="@string/dashboard"
-                            android:layout_marginTop="5dp"
                             android:textAlignment="center"
                             android:textColor="@android:color/white"
                             android:textSize="@dimen/_15sdp"
@@ -93,6 +93,7 @@
                             android:id="@+id/log_out"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:layout_centerVertical="true"
                             android:layout_alignParentRight="true"
                             android:layout_centerHorizontal="true"
                             android:layout_marginRight="15dp"
@@ -113,8 +114,62 @@
                         android:layout_below="@+id/header_layout"
                         android:background="#FFF" />
                 </androidx.appcompat.widget.Toolbar>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_40sdp"
+                android:gravity="end"
+                android:visibility="visible"
+                android:id="@+id/linear2"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_below="@+id/toolbar"
+                android:orientation="vertical">
 
-            </RelativeLayout>
+                <TextView
+                    android:id="@+id/Name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:textStyle="bold"
+                    android:text="Connection No"
+                    android:textColor="@color/colorPrimary"
+                    android:visibility="visible" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/Town"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:padding="5dp"
+                        android:textStyle="bold"
+                        android:text="Connection No"
+                        android:textColor="@color/colorPrimary"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/District"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:padding="5dp"
+                        android:textStyle="bold"
+                        android:text="Connection No"
+                        android:textColor="@color/colorPrimary"
+                        android:visibility="visible" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
 
 <!--
         <LinearLayout
@@ -267,73 +322,18 @@
         </LinearLayout>
 -->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-50dp"
-            android:paddingTop="5dp"
-            android:gravity="end"
-            android:visibility="visible"
-            android:id="@+id/linear2"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_below="@+id/img_rll"
-            android:paddingBottom="5dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/Name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:padding="5dp"
-                android:textStyle="bold"
-                android:text="Connection No"
-                android:textColor="@color/colorPrimary"
-                android:visibility="visible" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/Town"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:padding="5dp"
-                    android:textStyle="bold"
-                    android:text="Connection No"
-                    android:textColor="@color/colorPrimary"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/District"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:padding="5dp"
-                    android:textStyle="bold"
-                    android:text="Connection No"
-                    android:textColor="@color/colorPrimary"
-                    android:visibility="visible" />
-
-            </LinearLayout>
-
-        </LinearLayout>
 
 
 
         ///back ground drawable
         <RelativeLayout
 
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <RelativeLayout
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -382,6 +382,7 @@
 
         </RelativeLayout>
         <RelativeLayout
+            android:visibility="gone"
             android:background="@android:color/transparent"
             android:id="@+id/below_bg"
             android:layout_width="match_parent"
@@ -401,15 +402,13 @@
         <ScrollView
             android:visibility="visible"
             android:id="@+id/scroll_view"
-            android:layout_below="@+id/linear2"
-            android:layout_centerInParent="true"
             android:layout_width="match_parent"
+            android:layout_below="@+id/img_rll"
             android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:id="@+id/road_layout"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     >
