--- a/app/src/main/res/layout/camera_screen.xml
+++ b/app/src/main/res/layout/camera_screen.xml
@@ -26,7 +26,7 @@
             android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/margin"
             android:text="@string/take_Photo"
-            android:textColor="@android:color/black"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <ImageView
@@ -43,6 +43,7 @@
             android:id="@+id/home_img"
             android:layout_width="30dp"
             android:layout_height="40dp"
+            android:onClick="@{()-> activity.dashboard()}"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
             android:layout_marginRight="@dimen/_12sdp"
@@ -164,7 +165,6 @@
                 android:layout_height="40dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
-                android:onClick="@{()-> activity.saveImage()}"
                 android:background="@drawable/click_here"
                 android:text="@string/save_IMAGE"
                 android:textAllCaps="false"
