--- a/app/src/main/res/layout/new_dashboard.xml
+++ b/app/src/main/res/layout/new_dashboard.xml
@@ -50,13 +50,13 @@
                         <ImageView
                             android:layout_centerVertical="true"
                             android:id="@+id/refresh"
-                            android:layout_width="@dimen/_30sdp"
-                            android:layout_height="@dimen/_30sdp"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:layout_gravity="start"
                             android:layout_marginLeft="@dimen/_10sdp"
-                            android:background="@drawable/back"
+                            android:background="@drawable/ic_qr_code"
                             android:backgroundTint="@android:color/white"
-                            android:onClick="@{()-> activity.OnBackPressed()}" />
+                            android:onClick="@{()-> activity.qrScannerScreen()}" />
 
 
 
