--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/textView1"
-    android:layout_width="wrap_content"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerVertical="true"
+    android:ellipsize="marquee"
+    android:paddingBottom="10dp"
+    android:paddingLeft="20dp"
     android:textColor="@color/grey2"
-    android:paddingLeft="10dp"
-    android:paddingTop="2dp"
     android:paddingRight="10dp"
-    android:paddingBottom="2dp"
-    android:textSize="@dimen/_15sdp" />
+    android:paddingTop="5dp"
+    android:singleLine="true" />
