--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#6867E9</color>
     <color name="colorPrimaryDark">#6CBCE2</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorAccentLight">#E35F8F</color>
 
    <!-- <color name="colorPrimary">#E91E63</color>
     <color name="colorPrimaryLite">#FF4081</color>
