--- a/app/src/main/res/layout/date_picker_layout.xml
+++ b/app/src/main/res/layout/date_picker_layout.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="20dp"
+    android:padding="10dp"
+    android:background="@color/full_transparent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
-    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="5dp"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,6 +80,8 @@
 
         </LinearLayout>
         <DatePicker
+            android:verticalScrollbarPosition="right"
+            android:scrollbars="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -104,3 +117,4 @@
 
 
 </androidx.cardview.widget.CardView>
+</LinearLayout>
