--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:paddingBottom="10dp"
-    android:paddingLeft="20dp"
+    android:gravity="center_vertical"
+    android:paddingBottom="5dp"
+    android:textSize="@dimen/_13sdp"
+    android:paddingLeft="10dp"
     android:textColor="@color/grey2"
     android:paddingRight="10dp"
     android:paddingTop="5dp"
