--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/main"
-            android:visibility="gone"
+            android:visibility="visible"
             android:orientation="vertical">
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
@@ -108,7 +108,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/first"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:layout_marginBottom="@dimen/padding"
                         android:orientation="vertical">
                         //Applicant Name
@@ -665,7 +665,7 @@
                         android:layout_below="@+id/appBarLayout"
                         android:id="@+id/second"
                         android:layout_marginBottom="@dimen/padding"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:orientation="vertical">
                         //Ward No
                         <LinearLayout
@@ -1092,6 +1092,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:visibility="gone"
                             android:orientation="vertical">
 
                             <TextView
@@ -2139,7 +2140,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/document_layout"
-            android:visibility="visible">
+            android:visibility="gone">
             <RelativeLayout
                 android:id="@+id/header2_layout"
                 android:layout_width="match_parent"
