--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -1021,9 +1021,10 @@
                             <RelativeLayout
                                 android:id="@+id/lease_aggrement_layout"
                                 android:layout_width="match_parent"
-                                android:layout_height="40dp"
+                                android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="@dimen/padding"
+                                android:padding="5dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
                                 android:background="@color/white"
                                 android:orientation="vertical"
@@ -1037,48 +1038,43 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="30dp"
                                     android:gravity="center"
-                                    android:padding="2dp"
+                                    android:padding="4dp"
                                     android:layout_alignParentStart="true"
-                                    android:layout_centerInParent="true"
                                     android:layout_centerHorizontal="true"
                                     android:layout_marginLeft="10dp"
                                     android:background="@drawable/round_corner_button"
                                     android:ellipsize="marquee"
                                     android:text="@string/choose_File"
                                     android:textColor="@color/grey2"
-                                    android:textSize="14sp"
+                                    android:textSize="@dimen/_13sdp"
                                     customfontdemo:fontName="@string/font_circular_book" />
 
                                 <TextView
                                     android:layout_marginLeft="@dimen/_10sdp"
                                     android:layout_toRightOf="@+id/choose_file"
                                     android:textColor="@color/grey2"
-                                    android:textSize="@dimen/_15sdp"
+                                    android:textSize="@dimen/_13sdp"
                                     android:text="No File Selected"
                                     android:layout_centerVertical="true"
                                     android:id="@+id/file_location"
-                                    android:layout_width="wrap_content"
+                                    android:singleLine="true"
+                                    android:layout_width="100dp"
                                     android:layout_height="wrap_content"
-                                    android:scrollbars = "vertical"
-                                    android:layout_centerHorizontal="true"
-                                    android:layout_marginRight="@dimen/_6sdp"
+                                    android:layout_marginRight="5dp"
                                     customfontdemo:fontName="@string/font_circular_book"
                                     android:onClick="@{()-> activity.openFile()}"
                                     />
 
                                 <TextView
-                                    android:visibility="gone"
                                     android:layout_toRightOf="@+id/file_location"
                                     android:textColor="@color/grey2"
-                                    android:textSize="@dimen/_15sdp"
-                                    android:text="No File Selected"
+                                    android:textSize="@dimen/_13sdp"
                                     android:layout_centerVertical="true"
                                     android:id="@+id/file_size"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:scrollbars = "vertical"
                                     android:layout_alignParentRight="true"
-                                    android:layout_marginRight="@dimen/_6sdp"
                                     customfontdemo:fontName="@string/font_circular_book"
                                     />
 
