--- a/app/src/main/res/layout/exist_trader_details_whole_view.xml
+++ b/app/src/main/res/layout/exist_trader_details_whole_view.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/document_layout"
-        android:visibility="visible">
+        android:visibility="gone">
         <RelativeLayout
             android:id="@+id/header2_layout"
             android:layout_width="match_parent"
@@ -91,7 +91,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/full_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
