--- a/app/src/main/res/layout/tax_collection_tp.xml
+++ b/app/src/main/res/layout/tax_collection_tp.xml
@@ -158,3 +158,173 @@
 </LinearLayout>
 
 
+
+
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="0dp"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="visible"
+            android:elevation="6dp"
+            app:cardBackgroundColor="#fcfcfc"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="6dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+
+                    <TextView
+                        android:textSize="@dimen/_13sdp"
+                        android:textColor="@color/blue"
+                        android:padding="3dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/demand_text"
+                        android:text="Demand"
+                        ></TextView>
+                    <TextView
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/grey2"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/demand_amount"
+                        android:text="00.00"
+                        android:textSize="@dimen/_13sdp"
+                        android:padding="3dp"
+                        ></TextView>
+
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+
+
+                    <TextView
+                        android:textSize="@dimen/_13sdp"
+                        android:textColor="@color/blue"
+                        android:padding="3dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/balance_text"
+                        android:text="Balance"
+                        ></TextView>
+                    <TextView
+                        android:textColor="@color/grey2"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/balance_amount"
+                        android:text="00.00"
+                        android:textSize="@dimen/_13sdp"
+                        android:padding="3dp"
+                        ></TextView>
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:textSize="@dimen/_13sdp"
+                        android:textColor="@color/blue"
+                        android:padding="3dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/collection_text"
+                        android:text="Collection Amount"
+                        ></TextView>
+                    <TextView
+                        android:textColor="@color/grey2"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/taxAmount"
+                        android:text="00.00"
+                        android:textSize="@dimen/_13sdp"
+                        android:padding="3dp"
+                        ></TextView>
+
+                </RelativeLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/background_text_email"
+        >
+        <TextView
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:maxWidth="150dp"
+            android:singleLine="true"
+            android:minWidth="150dp"
+            android:minLines="1"
+            android:textSize="@dimen/_14sdp"
+            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/taxName"
+            android:text="hjsdgsadas"
+            />
+
+    </RelativeLayout>
+
+</RelativeLayout>
+-->
+
+
