--- a/app/src/main/res/layout/trade_recycler.xml
+++ b/app/src/main/res/layout/trade_recycler.xml
@@ -10,7 +10,7 @@
             android:layout_centerHorizontal="true"
             android:visibility="visible"
             android:elevation="6dp"
-            app:cardBackgroundColor="#fcfcfc"
+            app:cardBackgroundColor="@color/followingBg"
             app:cardCornerRadius="10dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@drawable/background_text_email"
+                android:background="@drawable/header_bg"
                 android:padding="10dp"
                 android:id="@+id/rel1">
                 <TextView
@@ -39,7 +39,7 @@
                     android:gravity="start"
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey1"
                     android:text="@string/trader_code"
                     android:fontFamily="sans-serif" />
 
@@ -50,7 +50,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:textSize="16sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey1"
                     android:text="@string/name"
                     android:fontFamily="sans-serif" />
                 <TextView
@@ -59,7 +59,7 @@
                     android:gravity="start"
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey1"
                     android:layout_marginTop="5dp"
                     android:text="@string/mobile_No"
                     android:fontFamily="sans-serif" />
@@ -69,7 +69,7 @@
                     android:gravity="start"
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey1"
                     android:layout_marginTop="5dp"
                     android:text="@string/email_Id"
                     android:fontFamily="sans-serif" />
@@ -80,7 +80,7 @@
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
                     android:visibility="gone"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey1"
                     android:layout_marginTop="5dp"
                     android:text="Payment Date"
                     android:fontFamily="sans-serif" />
@@ -101,7 +101,7 @@
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
                     android:maxLines="1"
-                    android:textColor="@color/border_line"
+                    android:textColor="@color/white"
                     android:id="@+id/codeValue"
                     android:text="@string/trader_code"
                     android:fontFamily="sans-serif" />
@@ -114,7 +114,7 @@
                 android:layout_marginTop="5dp"
                 android:textSize="16sp"
                 android:maxLines="1"
-                android:textColor="@color/border_line"
+                android:textColor="@color/white"
                 android:id="@+id/nameValue"
                 android:text="@string/trader_code"
                 android:fontFamily="sans-serif" />
@@ -125,7 +125,7 @@
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
                     android:maxLines="1"
-                    android:textColor="@color/border_line"
+                    android:textColor="@color/white"
                     android:layout_marginTop="5dp"
                     android:id="@+id/mobileValue"
                     android:text="@string/mobile_No"
@@ -137,7 +137,7 @@
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
                     android:maxLines="1"
-                    android:textColor="@color/border_line"
+                    android:textColor="@color/white"
                     android:layout_marginTop="5dp"
                     android:id="@+id/emailValue"
                     android:text="@string/email"
@@ -150,7 +150,7 @@
                     android:textSize="16sp"
                     android:maxLines="1"
                     android:visibility="gone"
-                    android:textColor="@color/border_line"
+                    android:textColor="@color/white"
                     android:layout_marginTop="5dp"
                     android:id="@+id/paymentDateValue"
                     android:text="paymentDate"
