--- a/app/src/main/res/drawable/text_color_grey1.xml
+++ b/app/src/main/res/drawable/text_color_grey1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 //#c3e9e4
-    <solid android:color="#D1F2FA"></solid>
+    <solid android:color="#FFF"></solid>
 </shape>
